deployment/gaming-analytics-pipeline.template
AWSTemplateFormatVersion: "2010-09-09"
Description: (SO0035) - Ingest, Store, and Analyze Gameplay Telemetry
Parameters:
  RedshiftInstanceType:
    Type: "String"
    Description: "Instance type used for Redshift nodes."
    Default: "dc2.large"
    AllowedValues:
      - "dc1.large"
      - "dc2.large"
  RedshiftUsername:
    Type: "String"
    Default: "root"
    Description: "Used by redshift for solution setup."
    MinLength: 1
  RedshiftPassword:
    Type: "String"
    Description: "Must contain a lowercase character, an uppercase character, and a number. Can not contain special characters (@$%, etc)."
    AllowedPattern: '^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?!.*[-+_!@#$%^&*.,?]).{8,}$'
    NoEcho: true
    MinLength: 8
  RedshiftWorkerPassword:
    Type: "String"
    Description: "Must contain a lowercase character, an uppercase character, and a number. Can not contain special characters (@$%, etc)."
    AllowedPattern: '^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?!.*[-+_!@#$%^&*.,?]).{8,}$'
    NoEcho: true
    MinLength: 8
  RedshiftReadOnlyPassword:
    Type: "String"
    Description: "Must contain a lowercase character, an uppercase character, and a number. Can not contain special characters (@$%, etc)."
    AllowedPattern: '^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?!.*[-+_!@#$%^&*.,?]).{8,}$'
    NoEcho: true
    MinLength: 8
  KeyName:
    Type: "AWS::EC2::KeyPair::KeyName"
    Description: "The KeyPair used to access the EC2 instances."
  ToolsInstanceCidrIp:
    Type: "String"
    Description: "Allow access to the tools instance from this CIDR block. Follows the format x.x.x.x/x"
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    MinLength: 1
  # Microsoft Windows Server 2016 with SQL Server 2017 Express
  ToolsInstanceAMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Description: "Microsoft Windows Server 2016 with SQL Server 2017 Express"
    Default: '/aws/service/ami-windows-latest/Windows_Server-2016-English-Full-SQL_2017_Express'
    MinLength: 1
  SolutionMode:
    Type: "String"
    Description: "In demo mode, data moves through the pipeline faster, but is batched less efficiently."
    Default: "Demo"
    AllowedValues:
      - "Demo"
      - "Prod"

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Redshift"
        Parameters:
          - RedshiftInstanceType
          - RedshiftUsername
          - RedshiftPassword
          - RedshiftWorkerPassword
          - RedshiftReadOnlyPassword
      - Label:
          default: "Tools Instance"
        Parameters:
          - KeyName
          - ToolsInstanceCidrIp
      - Label:
          default: "Solution Mode"
        Parameters:
          - SolutionMode
      - Label:
          default: "Windows AMI Lookup"
        Parameters:
          - ToolsInstanceAMI
    ParameterLabels:
      RedshiftUsername:
        default: "Root Username"
      RedshiftPassword:
        default: "Root Password"
      RedshiftWorkerPassword:
        default: "Worker Password"
      RedshiftReadOnlyPassword:
        default: "ReadOnly Password"
      KeyName:
        default: "EC2 KeyPair Name"
      ToolsInstanceCidrIp:
        default: "Tools Instance CIDR"
      ToolsInstanceAMI:
        default: "String for latest AMI in public SSM"
      SolutionMode:
        default: "Solution Mode"

Mappings:
  Solution:
    Data:
      ID: "SO0035"
      Version: "%%VERSION%%"
      AssetBucket: "%%BUCKET_NAME%%"
      SendAnonymousUsageData: true
  RedshiftMappings:
    Usernames:
      worker: "analytics_worker"
      readonly: "analytics_ro"
    Databases:
      analytics: "analytics"
    Schemas:
      game: "game"
    Cluster:
      Port: 5439
  S3ConnectorOptionSettings:
    BufferByteSizeLimit:
      Demo: "2048"
      Prod: "104857600"
    BufferMillisecondsLimit:
      Demo: "10000"
      Prod: "600000"
    BufferRecordCountLimit:
      Demo: "5"
      Prod: "500000"
  RedshiftConnectorOptionSettings:
    BufferByteSizeLimit:
      Demo: "1024"
      Prod: "999999"
    BufferMillisecondsLimit:
      Demo: "30000"
      Prod: "600000"
    BufferRecordCountLimit:
      Demo: "5"
      Prod: "36"

Resources:

  # VPC
  AnalyticsVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-vpc'

  # Public Subnets
  AnalyticsSubnet1A:
    Type: "AWS::EC2::Subnet"
    Properties:
      MapPublicIpOnLaunch: true
      CidrBlock: "10.0.0.0/24"
      AvailabilityZone:
        !Select
          - 0
          - !GetAZs
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-analytics-subnet-1a'
      VpcId: !Ref AnalyticsVPC

  AnalyticsSubnet1B:
    Type: "AWS::EC2::Subnet"
    Properties:
      MapPublicIpOnLaunch: true
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone:
        !Select
          - 1
          - !GetAZs
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-analytics-subnet-1b'
      VpcId: !Ref AnalyticsVPC

  RedshiftClusterSubnet1A:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.6.0/24"
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        !Select
          - 0
          - !GetAZs
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-redshift-cluster-subnet-1a'
      VpcId: !Ref AnalyticsVPC

  RedshiftClusterSubnet1B:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.7.0/24"
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        !Select
          - 0
          - !GetAZs
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-redshift-cluster-subnet-1b'
      VpcId: !Ref AnalyticsVPC

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-internet-gateway'

  GatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref AnalyticsVPC

  PublicSubnetRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref AnalyticsVPC
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-public-route-table'

  PublicSubnetRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicSubnetRouteTable
    DependsOn: GatewayAttachment

  AnalyticsSubnet1ARouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      SubnetId: !Ref AnalyticsSubnet1A

  AnalyticsSubnet1BRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      SubnetId: !Ref AnalyticsSubnet1B

  RedshiftClusterSubnet1ARouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      SubnetId: !Ref RedshiftClusterSubnet1A

  RedshiftClusterSubnet1BRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      SubnetId: !Ref RedshiftClusterSubnet1B

  # Private Subnets
  S3ConnectorSubnet1A:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.2.0/24"
      AvailabilityZone:
        !Select
          - 0
          - !GetAZs
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-s3-connector-subnet-1a'
      VpcId: !Ref AnalyticsVPC

  S3ConnectorSubnet1B:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.3.0/24"
      AvailabilityZone:
        !Select
          - 1
          - !GetAZs
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-s3-connector-subnet-1b'
      VpcId: !Ref AnalyticsVPC

  RedshiftConnectorSubnet1A:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.4.0/24"
      AvailabilityZone:
        !Select
          - 0
          - !GetAZs
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-redshift-connector-subnet-1a'
      VpcId: !Ref AnalyticsVPC

  RedshiftConnectorSubnet1B:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.5.0/24"
      AvailabilityZone:
        !Select
          - 1
          - !GetAZs
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-redshift-connector-subnet-1b'
      VpcId: !Ref AnalyticsVPC

  CronConnectorSubnet1A:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.8.0/24"
      AvailabilityZone:
        !Select
          - 1
          - !GetAZs
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-cron-connector-subnet-1a'
      VpcId: !Ref AnalyticsVPC

  ElasticIP1A:
    Type: "AWS::EC2::EIP"
    DependsOn: GatewayAttachment

  NATGateway1A:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt ElasticIP1A.AllocationId
      SubnetId: !Ref AnalyticsSubnet1A

  PrivateSubnetRouteTable1A:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref AnalyticsVPC
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-private-route-table-1a'

  PrivateSubnetRoute1A:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGateway1A
      RouteTableId: !Ref PrivateSubnetRouteTable1A

  ElasticIP1B:
    Type: "AWS::EC2::EIP"
    DependsOn: GatewayAttachment

  NATGateway1B:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt ElasticIP1B.AllocationId
      SubnetId: !Ref AnalyticsSubnet1B

  PrivateSubnetRouteTable1B:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref AnalyticsVPC
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-private-route-table-1b'

  PrivateSubnetRoute1B:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGateway1B
      RouteTableId: !Ref PrivateSubnetRouteTable1B

  S3ConnectorSubnet1ARouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTable1A
      SubnetId: !Ref S3ConnectorSubnet1A

  S3ConnectorSubnet1BRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTable1B
      SubnetId: !Ref S3ConnectorSubnet1B

  RedshiftConnectorSubnet1ARouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTable1A
      SubnetId: !Ref RedshiftConnectorSubnet1A

  RedshiftConnectorSubnet1BRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTable1B
      SubnetId: !Ref RedshiftConnectorSubnet1B

  CronConnectorSubnet1ARouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTable1A
      SubnetId: !Ref CronConnectorSubnet1A

  # Security Group
  IntraVPCSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: "Intra-VPC Security Group"
      GroupDescription: "Security group that allows inbound from the VPC and outbound to the Internet"
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-intra-vpc-security-group'
      VpcId: !Ref AnalyticsVPC

  IntraVPCSecurityGroupIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      FromPort: 0
      ToPort: 65535
      GroupId: !Ref IntraVPCSecurityGroup
      IpProtocol: "-1"
      SourceSecurityGroupId: !Ref IntraVPCSecurityGroup

  RDPAccessSecurityGroupIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      FromPort: !FindInMap [RedshiftMappings, Cluster, "Port"]
      ToPort: !FindInMap [RedshiftMappings, Cluster, "Port"]
      GroupId: !Ref IntraVPCSecurityGroup
      IpProtocol: "-1"
      SourceSecurityGroupId: !Ref RDPAccessSecurityGroup

  S3VPCEndpoint:
    Type: "AWS::EC2::VPCEndpoint"
    Properties:
      RouteTableIds:
        - !Ref PrivateSubnetRouteTable1A
        - !Ref PrivateSubnetRouteTable1B
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Ref AnalyticsVPC

  # S3 Buckets
  TelemetryBucket:
    Type: "AWS::S3::Bucket"
    DeletionPolicy: "Retain"

  ErrorBucket:
    Type: "AWS::S3::Bucket"
    DeletionPolicy: "Retain"

  ConfigBucket:
    Type: "AWS::S3::Bucket"
    DeletionPolicy: "Retain"

  # Kinesis
  AnalyticsTelemetryStream:
    Type: "AWS::Kinesis::Stream"
    Properties:
      ShardCount: 4
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-analytics-telemetry-stream'

  AnalyticsFileStream:
    Type: "AWS::Kinesis::Stream"
    Properties:
      ShardCount: 2
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-analytics-file-stream'

  # Redshift
  RedshiftSubnetGroup:
    Type: "AWS::Redshift::ClusterSubnetGroup"
    Properties:
      Description: "Cluster group for analytics Redshift cluster"
      SubnetIds:
        - !Ref RedshiftClusterSubnet1A
        - !Ref RedshiftClusterSubnet1B
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-redshift-cluster-group'

  RedshiftParameterGroup:
    Type: "AWS::Redshift::ClusterParameterGroup"
    Properties:
      Description: "Parameter group for analytics Redshift cluster"
      ParameterGroupFamily: "redshift-1.0"
      Parameters:
        - ParameterName: "require_ssl"
          ParameterValue: "true"
        - ParameterName: "enable_user_activity_logging"
          ParameterValue: "true"
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-redshift-parameter-group'

  RedshiftCluster:
    Type: "AWS::Redshift::Cluster"
    DependsOn: GatewayAttachment
    Properties:
      ClusterType: "multi-node"
      ClusterParameterGroupName: !Ref RedshiftParameterGroup
      ClusterSubnetGroupName: !Ref RedshiftSubnetGroup
      DBName: !FindInMap [RedshiftMappings, Databases, "analytics"]
      Encrypted: true
      MasterUsername: !Ref RedshiftUsername
      MasterUserPassword: !Ref RedshiftPassword
      NodeType: !Ref RedshiftInstanceType
      NumberOfNodes: 2
      Port: 5439
      PubliclyAccessible: true
      VpcSecurityGroupIds:
        - !Ref IntraVPCSecurityGroup
        - !Ref AllowExternalSecurityGroup

  AllowExternalSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Allows traffic from Kinesis Firehose and Amazon Quicksight"
      SecurityGroupEgress:
        - IpProtocol: "tcp"
          FromPort: 0
          ToPort: 65535
          CidrIp: "0.0.0.0/0"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 0
          ToPort: 65535
          CidrIp: "52.70.63.192/27"
        - IpProtocol: "tcp"
          FromPort: 0
          ToPort: 65535
          CidrIp: "52.89.255.224/27"
        - IpProtocol: "tcp"
          FromPort: 0
          ToPort: 65535
          CidrIp: "52.19.239.192/27"
        - IpProtocol: "tcp"
          FromPort: 0
          ToPort: 65535
          CidrIp: "52.23.63.224/27"
        - IpProtocol: "tcp"
          FromPort: 0
          ToPort: 65535
          CidrIp: "54.70.204.128/27"
        - IpProtocol: "tcp"
          FromPort: 0
          ToPort: 65535
          CidrIp: "52.210.255.224/27"
      VpcId: !Ref AnalyticsVPC
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-allow-external-security-group'

  # IAM
  S3ConnectorRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AWSElasticBeanstalkWebTier"
      Policies:
        - PolicyName: "S3ConnectorPolicy"
          PolicyDocument:
            Statement:

              # Attach inline policy to allow reading from "AnalyticsTelemetryStream" and writing to "AnalyticsFileStream"
              - Effect: "Allow"
                Action:
                  - "kinesis:GetRecords"
                  - "kinesis:GetShardIterator"
                  - "kinesis:DescribeStream"
                Resource:
                  - !Sub '${AnalyticsTelemetryStream.Arn}'
              - Effect: "Allow"
                Action:
                  - "kinesis:PutRecord"
                Resource:
                  - !Sub '${AnalyticsFileStream.Arn}'

              # Attach inline policy to allow writing to Telemetry and Error buckets
              - Effect: "Allow"
                Action:
                  - "s3:PutObject"
                Resource:
                  - !Sub '${TelemetryBucket.Arn}/*'
                  - !Sub '${ErrorBucket.Arn}/*'

              # Attach inline policy to allow writing to DynamoDB
              - Effect: "Allow"
                Action:
                  - "dynamodb:BatchGetItem"
                  - "dynamodb:BatchWriteItem"
                  - "dynamodb:CreateTable"
                  - "dynamodb:DeleteItem"
                  - "dynamodb:DescribeStream"
                  - "dynamodb:DescribeTable"
                  - "dynamodb:GetItem"
                  - "dynamodb:GetShardIterator"
                  - "dynamodb:ListStreams"
                  - "dynamodb:ListTables"
                  - "dynamodb:PutItem"
                  - "dynamodb:Query"
                  - "dynamodb:Scan"
                  - "dynamodb:UpdateItem"
                  - "dynamodb:UpdateTable"
                Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${AWS::StackName}-AnalyticsS3CompoundConnector'

              # Attach inline policy to allow writing to CloudWatch Logs
              - Effect: "Allow"
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                  - "logs:DescribeLogStreams"
                Resource: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:*'

              # Attach inline policy to allow writing to CloudWatch Metrics
              - Effect: "Allow"
                Action:
                  - "cloudwatch:PutMetricData"
                Resource: "*"

  S3ConnectorInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Roles:
        - !Ref S3ConnectorRole

  RedshiftConnectorRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AWSElasticBeanstalkWebTier"
      Policies:
        - PolicyName: "redshift-access-policy"
          PolicyDocument:
            Statement:

              # Attach inline policy to allow reading from "AnalyticsFileStream"
              - Effect: "Allow"
                Action:
                  - "kinesis:DescribeStream"
                  - "kinesis:GetRecords"
                  - "kinesis:GetShardIterator"
                Resource:
                  - !Sub '${AnalyticsFileStream.Arn}'

              # Attach inline policy to allow writing to DynamoDB
              - Effect: "Allow"
                Action:
                  - "dynamodb:CreateTable"
                  - "dynamodb:DeleteItem"
                  - "dynamodb:DescribeTable"
                  - "dynamodb:GetItem"
                  - "dynamodb:PutItem"
                  - "dynamodb:Scan"
                  - "dynamodb:UpdateItem"
                Resource:
                  - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/*'

              # Attach inline policy to allow reading/writing from S3 configuration bucket
              - Effect: "Allow"
                Action:
                  - "s3:GetObject"
                  - "s3:PutObject"
                Resource:
                  - !Sub '${ConfigBucket.Arn}/*'

              # Attach inline policy to allow reading/writing from S3 configuration bucket
              - Effect: "Allow"
                Action:
                  - "s3:GetObject"
                  - "s3:ListBucket"
                Resource:
                  - !Sub '${TelemetryBucket.Arn}'
                  - !Sub '${TelemetryBucket.Arn}/*'

              - Effect: "Allow"
                Action:
                  - "s3:PutObject"
                Resource:
                  - !Sub '${TelemetryBucket.Arn}/manifests/*'

              # Attach inline policy to allow Redshift access
              - Effect: "Allow"
                Action:
                  - "redshift:GetClusterCredentials"
                Resource:
                  - !Sub
                    - 'arn:aws:redshift:${AWS::Region}:${AWS::AccountId}:dbname:${RedshiftCluster}/${TableName}'
                    - TableName: !FindInMap [RedshiftMappings, Databases, "analytics"]
                  - !Sub
                    - 'arn:aws:redshift:${AWS::Region}:${AWS::AccountId}:dbuser:${RedshiftCluster}/${Username}'
                    - Username: !FindInMap [RedshiftMappings, Usernames, "worker"]
                  - !Sub
                    - 'arn:aws:redshift:${AWS::Region}:${AWS::AccountId}:dbuser:${RedshiftCluster}/${Username}'
                    - Username: !FindInMap [RedshiftMappings, Usernames, "readonly"]

              # Attach inline policy to allow writing to CloudWatch Logs
              - Effect: "Allow"
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                  - "logs:DescribeLogStreams"
                Resource:
                  - !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:*'

              # Attach inline policy to allow writing to CloudWatch Metrics
              - Effect: "Allow"
                Action:
                  - "cloudwatch:PutMetricData"
                Resource:
                  - "*"

  RedshiftConnectorInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Roles:
        - !Ref RedshiftConnectorRole

  CronConnectorRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AWSElasticBeanstalkWorkerTier"
      Policies:
        - PolicyName: "cronconnector-access-policy"
          PolicyDocument:
            Statement:

              # Attach inline policy to allow reading from "AnalyticsFileStream"
              - Effect: "Allow"
                Action:
                  - "kinesis:DescribeStream"
                  - "kinesis:GetRecords"
                  - "kinesis:GetShardIterator"
                Resource:
                  - !Sub '${AnalyticsFileStream.Arn}'

              # Attach inline policy to allow Redshift access
              - Effect: "Allow"
                Action:
                  - "redshift:GetClusterCredentials"
                Resource:
                  - !Sub
                    - 'arn:aws:redshift:${AWS::Region}:${AWS::AccountId}:dbname:${RedshiftCluster}/${TableName}'
                    - TableName: !FindInMap [RedshiftMappings, Databases, "analytics"]
                  - !Sub
                    - 'arn:aws:redshift:${AWS::Region}:${AWS::AccountId}:dbuser:${RedshiftCluster}/${Username}'
                    - Username: !FindInMap [RedshiftMappings, Usernames, "worker"]

              # Attach inline policy to allow writing to CloudWatch Logs
              - Effect: "Allow"
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                  - "logs:DescribeLogStreams"
                Resource:
                  - !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:*'

              # Attach inline policy to allow writing to CloudWatch Metrics
              - Effect: "Allow"
                Action:
                  - "cloudwatch:PutMetricData"
                  - "cloudwatch:GetMetricStatistics"
                  - "cloudwatch:ListMetrics"
                Resource:
                  - "*"

  CronConnectorInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Roles:
        - !Ref CronConnectorRole

  TelemetryPublisherRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AWSElasticBeanstalkWebTier"
      Policies:
        - PolicyName: "S3ConnectorPolicy"
          PolicyDocument:
            Statement:

              # Attach inline policy to allow writing to "AnalyticsTelemetryStream"
              - Effect: "Allow"
                Action:
                  - "kinesis:PutRecord"
                Resource:
                  - !Sub '${AnalyticsTelemetryStream.Arn}'

  AnalyticsApplication:
    Type: AWS::ElasticBeanstalk::Application
    Properties:
      Description: "Gaming Analytics Pipeline Application"

  AnalyticsApplicationVersion:
    Type: AWS::ElasticBeanstalk::ApplicationVersion
    Properties:
      ApplicationName: !Ref AnalyticsApplication
      Description: "S3 Connector"
      SourceBundle:
        S3Bucket: !Sub
          - '${AssetBucket}-${AWS::Region}'
          - AssetBucket: !FindInMap [Solution, Data, AssetBucket]
        S3Key: !Sub
          - 'gaming-analytics-pipeline/${SolutionVersion}/analytics-pipeline-1.0.0.war'
          - SolutionVersion: !FindInMap [Solution, Data, Version]

  # Elastic Beanstalk needs to assume a role that gives permissions to update resources.
  # The role is automatically created if Elastic Beanstalk is launched from the console,
  # but we can't guarantee that it will be there.
  # There is a managed policy ARN, but it changes from time to time so we'll recreate
  # it here.
  # https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/iam-servicerole.html
  ElasticBeanstalkServiceRole:
    Type: AWS::IAM::Role
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: F3
            reason: "Names for Elastic Beanstalk resources are not known."
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "elasticbeanstalk.amazonaws.com"
            Action: "sts:AssumeRole"
            Condition:
              StringEquals:
                sts:ExternalId: "elasticbeanstalk"
      Policies:
        - PolicyName: "ElasticBeanstalkServicePolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Sid: "AllowCloudformationOperationsOnElasticBeanstalkStacks"
                Effect: "Allow"
                Action:
                  - "cloudformation:*"
                Resource:
                  - "arn:aws:cloudformation:*:*:stack/awseb-*"
                  - "arn:aws:cloudformation:*:*:stack/eb-"
              - Sid: "AllowS3OperationsOnElasticBeanstalkBuckets"
                Effect: "Allow"
                Action:
                  - "s3:*"
                Resource:
                  - "arn:aws:s3:::elasticbeanstalk-*"
                  - "arn:aws:s3:::elasticbeanstalk-*/*"
              - Sid: "AllowOperations"
                Effect: "Allow"
                Action:
                  - "autoscaling:AttachInstances"
                  - "autoscaling:CreateAutoScalingGroup"
                  - "autoscaling:CreateLaunchConfiguration"
                  - "autoscaling:DeleteLaunchConfiguration"
                  - "autoscaling:DeleteAutoScalingGroup"
                  - "autoscaling:DeleteScheduledAction"
                  - "autoscaling:DescribeAccountLimits"
                  - "autoscaling:DescribeAutoScalingGroups"
                  - "autoscaling:DescribeAutoScalingInstances"
                  - "autoscaling:DescribeLaunchConfigurations"
                  - "autoscaling:DescribeLoadBalancers"
                  - "autoscaling:DescribeNotificationConfigurations"
                  - "autoscaling:DescribeScalingActivities"
                  - "autoscaling:DescribeScheduledActions"
                  - "autoscaling:DetachInstances"
                  - "autoscaling:PutScheduledUpdateGroupAction"
                  - "autoscaling:ResumeProcesses"
                  - "autoscaling:SetDesiredCapacity"
                  - "autoscaling:SuspendProcesses"
                  - "autoscaling:TerminateInstanceInAutoScalingGroup"
                  - "autoscaling:UpdateAutoScalingGroup"
                  - "cloudwatch:PutMetricAlarm"
                  - "ec2:AuthorizeSecurityGroupEgress"
                  - "ec2:AuthorizeSecurityGroupIngress"
                  - "ec2:CreateSecurityGroup"
                  - "ec2:DeleteSecurityGroup"
                  - "ec2:DescribeAccountAttributes"
                  - "ec2:DescribeImages"
                  - "ec2:DescribeInstances"
                  - "ec2:DescribeKeyPairs"
                  - "ec2:DescribeSecurityGroups"
                  - "ec2:DescribeSubnets"
                  - "ec2:DescribeVpcs"
                  - "ec2:RevokeSecurityGroupEgress"
                  - "ec2:RevokeSecurityGroupIngress"
                  - "ec2:TerminateInstances"
                  - "ecs:CreateCluster"
                  - "ecs:DeleteCluster"
                  - "ecs:DescribeClusters"
                  - "ecs:RegisterTaskDefinition"
                  - "elasticbeanstalk:*"
                  - "elasticloadbalancing:ApplySecurityGroupsToLoadBalancer"
                  - "elasticloadbalancing:ConfigureHealthCheck"
                  - "elasticloadbalancing:CreateLoadBalancer"
                  - "elasticloadbalancing:DeleteLoadBalancer"
                  - "elasticloadbalancing:DeregisterInstancesFromLoadBalancer"
                  - "elasticloadbalancing:DescribeInstanceHealth"
                  - "elasticloadbalancing:DescribeLoadBalancers"
                  - "elasticloadbalancing:DescribeTargetHealth"
                  - "elasticloadbalancing:RegisterInstancesWithLoadBalancer"
                  - "iam:ListRoles"
                  - "iam:PassRole"
                  - "logs:CreateLogGroup"
                  - "logs:PutRetentionPolicy"
                  - "rds:DescribeDBInstances"
                  - "rds:DescribeOrderableDBInstanceOptions"
                  - "s3:CopyObject"
                  - "s3:GetObject"
                  - "s3:GetObjectAcl"
                  - "s3:GetObjectMetadata"
                  - "s3:ListBucket"
                  - "s3:listBuckets"
                  - "s3:ListObjects"
                  - "sns:CreateTopic"
                  - "sns:GetTopicAttributes"
                  - "sns:ListSubscriptionsByTopic"
                  - "sns:Subscribe"
                  - "sqs:GetQueueAttributes"
                  - "sqs:GetQueueUrl"
                Resource:
                  - "*"

  s3ConnectorConfigurationTemplate:
    Type: AWS::ElasticBeanstalk::ConfigurationTemplate
    Properties:
      ApplicationName: !Ref AnalyticsApplication
      Description: "S3 Connector"
      OptionSettings:
        - Namespace: "aws:autoscaling:asg"
          OptionName: "MinSize"
          Value: "2"
        - Namespace: "aws:autoscaling:asg"
          OptionName: "MaxSize"
          Value: "4"
        - Namespace: "aws:autoscaling:trigger"
          OptionName: "MeasureName"
          Value: "CPUUtilization"
        - Namespace: "aws:autoscaling:trigger"
          OptionName: "Unit"
          Value: "Percent"
        - Namespace: "aws:autoscaling:trigger"
          OptionName: "LowerThreshold"
          Value: "20"
        - Namespace: "aws:autoscaling:trigger"
          OptionName: "UpperThreshold"
          Value: "80"
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: SecurityGroups
          Value: !Ref IntraVPCSecurityGroup
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: IamInstanceProfile
          Value: !Ref S3ConnectorInstanceProfile
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: "EC2KeyName"
          Value: !Ref KeyName
        - Namespace: "aws:ElasticBeanstalk:environment"
          OptionName: "ServiceRole"
          Value: !Sub '${ElasticBeanstalkServiceRole.Arn}'
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: InstanceType
          Value: "t2.small"
        - Namespace: "aws:elasticbeanstalk:environment"
          OptionName: "EnvironmentType"
          Value: "LoadBalanced"
        - Namespace: "aws:ec2:vpc"
          OptionName: "VPCId"
          Value: !Ref AnalyticsVPC
        - Namespace: "aws:ec2:vpc"
          OptionName: "Subnets"
          Value: !Sub '${S3ConnectorSubnet1A}, ${S3ConnectorSubnet1B}'
        - Namespace: "aws:ec2:vpc"
          OptionName: "ELBScheme"
          Value: "internal"
        - Namespace: "aws:elasticbeanstalk:container:tomcat:jvmoptions"
          OptionName: "Xms"
          Value: "512m"
        - Namespace: "aws:elasticbeanstalk:container:tomcat:jvmoptions"
          OptionName: "Xmx"
          Value: "1024m"
        - Namespace: "aws:elasticbeanstalk:application"
          OptionName: "Application HealthCheck URL"
          Value: "/health"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "ConnectorType"
          Value: "s3compound"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "ProjectName"
          Value: "analytics"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "aws_region_name"
          Value: !Ref "AWS::Region"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "kinesis_app_name"
          Value: !Sub '${AWS::StackName}-AnalyticsS3CompoundConnector'
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "kinesis_file_stream"
          Value: !Ref AnalyticsFileStream
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "kinesis_input_stream"
          Value: !Ref AnalyticsTelemetryStream
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "s3_config_bucket"
          Value: !Ref ConfigBucket
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "s3_telemetry_bucket"
          Value: !Ref TelemetryBucket
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "s3_error_bucket"
          Value: !Ref ErrorBucket
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "buffer_byte_size_limit"
          Value: !FindInMap [S3ConnectorOptionSettings, BufferByteSizeLimit, !Ref SolutionMode]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "buffer_milliseconds_limit"
          Value: !FindInMap [S3ConnectorOptionSettings, BufferMillisecondsLimit, !Ref SolutionMode]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "buffer_record_count_limit"
          Value: !FindInMap [S3ConnectorOptionSettings, BufferRecordCountLimit, !Ref SolutionMode]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "send_anonymous_data"
          Value: !FindInMap [Solution, Data, "SendAnonymousUsageData"]
      PlatformArn: !Sub 'arn:aws:elasticbeanstalk:${AWS::Region}::platform/Tomcat 8 with Java 8 running on 64bit Amazon Linux'

  s3ConnectorEnvironment:
    Type: AWS::ElasticBeanstalk::Environment
    DependsOn: CronConnectorEnvironment
    Properties:
      ApplicationName: !Ref AnalyticsApplication
      Description: "S3 Connector Environment"
      TemplateName: !Ref s3ConnectorConfigurationTemplate
      VersionLabel: !Ref AnalyticsApplicationVersion

  redshiftConnectorConfigurationTemplate:
    Type: AWS::ElasticBeanstalk::ConfigurationTemplate
    Properties:
      ApplicationName: !Ref AnalyticsApplication
      Description: "S3 Connector"
      OptionSettings:
        - Namespace: "aws:autoscaling:asg"
          OptionName: "MinSize"
          Value: "2"
        - Namespace: "aws:autoscaling:asg"
          OptionName: "MaxSize"
          Value: "2"
        - Namespace: "aws:autoscaling:trigger"
          OptionName: "MeasureName"
          Value: "CPUUtilization"
        - Namespace: "aws:autoscaling:trigger"
          OptionName: "Unit"
          Value: "Percent"
        - Namespace: "aws:autoscaling:trigger"
          OptionName: "LowerThreshold"
          Value: "20"
        - Namespace: "aws:autoscaling:trigger"
          OptionName: "UpperThreshold"
          Value: "80"
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: SecurityGroups
          Value: !Ref IntraVPCSecurityGroup
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: IamInstanceProfile
          Value: !Ref RedshiftConnectorInstanceProfile
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: "EC2KeyName"
          Value: !Ref KeyName
        - Namespace: "aws:ElasticBeanstalk:environment"
          OptionName: "ServiceRole"
          Value: !Sub '${ElasticBeanstalkServiceRole.Arn}'
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: InstanceType
          Value: "t2.small"
        - Namespace: "aws:elasticbeanstalk:environment"
          OptionName: "EnvironmentType"
          Value: "LoadBalanced"
        - Namespace: "aws:ec2:vpc"
          OptionName: "VPCId"
          Value: !Ref AnalyticsVPC
        - Namespace: "aws:ec2:vpc"
          OptionName: "Subnets"
          Value: !Sub '${RedshiftConnectorSubnet1A}, ${RedshiftConnectorSubnet1B}'
        - Namespace: "aws:ec2:vpc"
          OptionName: "ELBScheme"
          Value: "internal"
        - Namespace: "aws:elasticbeanstalk:container:tomcat:jvmoptions"
          OptionName: "Xms"
          Value: "512m"
        - Namespace: "aws:elasticbeanstalk:container:tomcat:jvmoptions"
          OptionName: "Xmx"
          Value: "1024m"
        - Namespace: "aws:elasticbeanstalk:application"
          OptionName: "Application HealthCheck URL"
          Value: "/health"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "kinesis_app_name"
          Value: !Sub '${AWS::StackName}-AnalyticsRedshiftConnector'
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "ConnectorType"
          Value: "redshift"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "ProjectName"
          Value: "analytics"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "aws_region_name"
          Value: !Ref "AWS::Region"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "kinesis_input_stream"
          Value: !Ref AnalyticsFileStream
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_cluster_identifier"
          Value: !Ref RedshiftCluster
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_jdbc"
          Value: !Sub
            - 'jdbc:redshift://${RedshiftCluster.Endpoint.Address}:${RedshiftCluster.Endpoint.Port}/${TableName}?ssl=true'
            - TableName: !FindInMap [RedshiftMappings, Databases, "analytics"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "s3_config_bucket"
          Value: !Ref ConfigBucket
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "s3_telemetry_bucket"
          Value: !Ref TelemetryBucket
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_worker_username"
          Value: !FindInMap [RedshiftMappings, Usernames, "worker"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_database"
          Value: !FindInMap [RedshiftMappings, Databases, "analytics"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_schema"
          Value: !FindInMap [RedshiftMappings, Schemas, "game"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "buffer_byte_size_limit"
          Value: !FindInMap [RedshiftConnectorOptionSettings, BufferByteSizeLimit, !Ref SolutionMode]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "buffer_milliseconds_limit"
          Value: !FindInMap [RedshiftConnectorOptionSettings, BufferMillisecondsLimit, !Ref SolutionMode]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "buffer_record_count_limit"
          Value: !FindInMap [RedshiftConnectorOptionSettings, BufferRecordCountLimit, !Ref SolutionMode]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "send_anonymous_data"
          Value: !FindInMap [Solution, Data, "SendAnonymousUsageData"]
      PlatformArn: !Sub 'arn:aws:elasticbeanstalk:${AWS::Region}::platform/Tomcat 8 with Java 8 running on 64bit Amazon Linux'

  RedshiftConnectorEnvironment:
    DependsOn: CronConnectorEnvironment
    Type: AWS::ElasticBeanstalk::Environment
    Properties:
      ApplicationName: !Ref AnalyticsApplication
      Description: "Redshift Connector Environment"
      TemplateName: !Ref redshiftConnectorConfigurationTemplate
      VersionLabel: !Ref AnalyticsApplicationVersion

  CronConnectorConfigurationTemplate:
    Type: AWS::ElasticBeanstalk::ConfigurationTemplate
    Properties:
      ApplicationName: !Ref AnalyticsApplication
      Description: "Cron Connector"
      OptionSettings:
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: SecurityGroups
          Value: !Ref IntraVPCSecurityGroup
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: IamInstanceProfile
          Value: !Ref CronConnectorInstanceProfile
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: "EC2KeyName"
          Value: !Ref KeyName
        - Namespace: "aws:ElasticBeanstalk:environment"
          OptionName: "ServiceRole"
          Value: !Sub '${ElasticBeanstalkServiceRole.Arn}'
        - Namespace: "aws:autoscaling:launchconfiguration"
          OptionName: InstanceType
          Value: "t2.small"
        - Namespace: "aws:elasticbeanstalk:environment"
          OptionName: "EnvironmentType"
          Value: "SingleInstance"
        - Namespace: "aws:ec2:vpc"
          OptionName: "VPCId"
          Value: !Ref AnalyticsVPC
        - Namespace: "aws:ec2:vpc"
          OptionName: "Subnets"
          Value: !Ref CronConnectorSubnet1A
        - Namespace: "aws:elasticbeanstalk:container:tomcat:jvmoptions"
          OptionName: "Xms"
          Value: "512m"
        - Namespace: "aws:elasticbeanstalk:container:tomcat:jvmoptions"
          OptionName: "Xmx"
          Value: "1024m"
        - Namespace: "aws:elasticbeanstalk:application"
          OptionName: "Application HealthCheck URL"
          Value: "/health"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "ConnectorType"
          Value: "cron"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "ProjectName"
          Value: "analytics"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "aws_region_name"
          Value: !Ref "AWS::Region"
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_cluster_identifier"
          Value: !Ref RedshiftCluster
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_jdbc"
          Value: !Sub
            - 'jdbc:redshift://${RedshiftCluster.Endpoint.Address}:${RedshiftCluster.Endpoint.Port}/${TableName}?ssl=true'
            - TableName: !FindInMap [RedshiftMappings, Databases, "analytics"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_worker_username"
          Value: !FindInMap [RedshiftMappings, Usernames, "worker"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_readonly_username"
          Value: !FindInMap [RedshiftMappings, Usernames, "readonly"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_database"
          Value: !FindInMap [RedshiftMappings, Databases, "analytics"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "redshift_schema"
          Value: !FindInMap [RedshiftMappings, Schemas, "game"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "solution_id"
          Value: !FindInMap [Solution, Data, "ID"]
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "solution_uuid"
          Value: !GetAtt CreateUniqueID.UUID
        - Namespace: "aws:elasticbeanstalk:application:environment"
          OptionName: "send_anonymous_data"
          Value: !FindInMap [Solution, Data, "SendAnonymousUsageData"]
      PlatformArn: !Sub 'arn:aws:elasticbeanstalk:${AWS::Region}::platform/Tomcat 8 with Java 8 running on 64bit Amazon Linux'

  CronConnectorEnvironment:
    Type: AWS::ElasticBeanstalk::Environment
    DependsOn: CustomResource
    Properties:
      ApplicationName: !Ref AnalyticsApplication
      Description: "Cron Connector Environment"
      TemplateName: !Ref CronConnectorConfigurationTemplate
      VersionLabel: !Ref AnalyticsApplicationVersion

  # Redshift Setup Custom Resource
  CustomResourceRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"

  CustomResourceLambda:
    Type: "AWS::Lambda::Function"
    Properties:
      Code:
        S3Bucket: !Sub
          - '${AssetBucket}-${AWS::Region}'
          - AssetBucket: !FindInMap [Solution, Data, AssetBucket]
        S3Key: !Sub
          - 'gaming-analytics-pipeline/${SolutionVersion}/custom-resource.zip'
          - SolutionVersion: !FindInMap [Solution, Data, Version]
      Handler: "custom_resource/custom_resource.lambda_handler"
      Runtime: python2.7
      Timeout: 30
      Role: !GetAtt CustomResourceRole.Arn
      VpcConfig:
        SecurityGroupIds:
          - !Ref IntraVPCSecurityGroup
        SubnetIds:
          - !Ref CustomResourceSubnet
      Environment:
        Variables:
          SOLUTION_UUID: !GetAtt CreateUniqueID.UUID
          SOLUTION_ID: !FindInMap [Solution, Data, ID]
          SOLUTION_VERSION: !FindInMap [Solution, Data, Version]

  CustomResource:
    Type: "Custom::CustomResource"
    DependsOn:
      - RedshiftClusterSubnet1A
      - RedshiftClusterSubnet1ARouteTableAssociation
      - RedshiftClusterSubnet1B
      - RedshiftClusterSubnet1BRouteTableAssociation
      - CustomResourceSubnetRoute
      - CustomResourceRouteTableAssociation
      - CustomResourceNGW
    Properties:
      ServiceToken: !GetAtt CustomResourceLambda.Arn
      Username: !Ref RedshiftUsername
      Password: !Ref RedshiftPassword
      DatabaseName: !FindInMap [RedshiftMappings, Databases, "analytics"]
      Host: !GetAtt RedshiftCluster.Endpoint.Address
      Port: !GetAtt RedshiftCluster.Endpoint.Port
      WorkerUsername: !FindInMap [RedshiftMappings, Usernames, "worker"]
      WorkerPassword: !Ref RedshiftWorkerPassword
      ReadOnlyUsername: !FindInMap [RedshiftMappings, Usernames, "readonly"]
      ReadOnlyPassword: !Ref RedshiftReadOnlyPassword
      SchemaName: !FindInMap [RedshiftMappings, Schemas, "game"]

  CustomResourceSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.10.16/28"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-custom-resource-subnet-1a'
      VpcId: !Ref AnalyticsVPC

  CustomResourceSubnetRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref AnalyticsVPC
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-custom-resource-route-table'

  CustomResourceSubnetRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref CustomResourceNGW
      RouteTableId: !Ref CustomResourceSubnetRouteTable

  CustomResourceNGWEIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: "vpc"

  CustomResourceNGW:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt CustomResourceNGWEIP.AllocationId
      SubnetId: !Ref RedshiftClusterSubnet1A

  CustomResourceRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref CustomResourceSubnetRouteTable
      SubnetId: !Ref CustomResourceSubnet

  # Tools Host
  ToolsInstance:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: !Ref ToolsInstanceAMI
      InstanceType: "t2.micro"
      IamInstanceProfile: !Ref ToolsInstanceProfile
      SecurityGroupIds:
        - !Ref RDPAccessSecurityGroup
      SubnetId: !Ref AnalyticsSubnet1A
      KeyName: !Ref KeyName
      Tags:
        - Key: "Name"
          Value: !Sub '${AWS::StackName}-tools-instance'
      UserData:
        Fn::Base64:
          !Join
            - ""
            - - "<script>\n"
              - "cfn-init.exe -v -s "
              - !Ref "AWS::StackId"
              - " -r ToolsInstance"
              - " --region "
              - !Ref "AWS::Region"
              - "\n"
              - "cfn-signal.exe \n"
              - "</script>"
              - "<powershell>"
              - "iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1')) \n"
              - "$env:Path = [System.Environment]::GetEnvironmentVariable('Path','Machine') + ';' + [System.Environment]::GetEnvironmentVariable('Path','User') \n"
              - "choco install -y python2 \n"
              - "refreshenv \n"
              - "c:\\tmp\\extract-tools.ps1 \n"
              - "</powershell>"
    Metadata:
      AWS::CloudFormation::Init:
        config:
          files:
            "C:\\tmp\\extract-tools.ps1":
              source: !Sub
                - 'https://${AssetBucket}-${AWS::Region}.s3.amazonaws.com/gaming-analytics-pipeline/${SolutionVersion}/extract-tools.ps1'
                - AssetBucket: !FindInMap [Solution, Data, AssetBucket]
                  SolutionVersion: !FindInMap [Solution, Data, Version]
            "C:\\tmp\\data-generator.zip":
              source: !Sub
                - 'https://${AssetBucket}-${AWS::Region}.s3.amazonaws.com/gaming-analytics-pipeline/${SolutionVersion}/data-generator.zip'
                - AssetBucket: !FindInMap [Solution, Data, AssetBucket]
                  SolutionVersion: !FindInMap [Solution, Data, Version]
            "C:\\tmp\\heatmap-generator.zip":
              source: !Sub
                - 'https://${AssetBucket}-${AWS::Region}.s3.amazonaws.com/gaming-analytics-pipeline/${SolutionVersion}/heatmap-generator.zip'
                - AssetBucket: !FindInMap [Solution, Data, AssetBucket]
                  SolutionVersion: !FindInMap [Solution, Data, Version]
            "C:\\Users\\Administrator\\Desktop\\demo.txt":
              content: !Join
                - "\r\n"
                - - "# Open powershell"
                  - "powershell"
                  - ""
                  - "# Navigate to the data generator and install dependencies"
                  - "cd C:\\Users\\Administrator\\Desktop\\data-generator\\"
                  - "pip install -r .\\requirements.txt"
                  - ""
                  - "# Generate data"
                  - !Sub "python .\\publish_data.py -r ${AWS::Region} -s ${AnalyticsTelemetryStream} -i .\\heatmap-sample-data.txt"
                  - ""
                  - "# Navigate to the heatmap generator and install dependencies"
                  - "cd C:\\Users\\Administrator\\Desktop\\heatmap-generator\\"
                  - "pip install -r .\\requirements.txt"
                  - "\n"
                  - "# Run the heatmap generation script"
                  - !Sub "python .\\generate_heatmap.py --db_host ${RedshiftCluster.Endpoint.Address} -r ${AWS::Region} -c ${RedshiftCluster} -e player_death"

  ToolsInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Roles:
        - !Ref ToolsInstanceRole

  ToolsInstanceRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Policies:
        - PolicyName: "tools-host-policy"
          PolicyDocument:
            Statement:

              # Attach inline policy to allow writing to "AnalyticsFileStream"
              - Effect: "Allow"
                Action:
                  - "kinesis:PutRecords"
                Resource: !GetAtt AnalyticsTelemetryStream.Arn

              # Attach inline policy to allow Redshift access
              - Effect: "Allow"
                Action:
                  - "redshift:GetClusterCredentials"
                Resource:
                  - !Sub
                    - 'arn:aws:redshift:${AWS::Region}:${AWS::AccountId}:dbname:${RedshiftCluster}/${TableName}'
                    - TableName: !FindInMap [RedshiftMappings, Databases, "analytics"]
                  - !Sub
                    - 'arn:aws:redshift:${AWS::Region}:${AWS::AccountId}:dbuser:${RedshiftCluster}/${Username}'
                    - Username: !FindInMap [RedshiftMappings, Usernames, "worker"]
                  - !Sub
                    - 'arn:aws:redshift:${AWS::Region}:${AWS::AccountId}:dbuser:${RedshiftCluster}/${Username}'
                    - Username: !FindInMap [RedshiftMappings, Usernames, "readonly"]

  RDPAccessSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Allows RDP access to tools host"
      VpcId: !Ref AnalyticsVPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref ToolsInstanceCidrIp
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"

  # Solution Helper
  SolutionHelper:
    Type: "AWS::Lambda::Function"
    Properties:
      Handler: "solution-helper.lambda_handler"
      Role: !GetAtt SolutionHelperRole.Arn
      Description: "Helper function for generating a UUID"
      Code:
        S3Bucket: !Sub 'solutions-${AWS::Region}'
        S3Key: "library/solution-helper/v3/solution-helper.zip"
      Runtime: "python2.7"
      Timeout: 300
      Environment:
        Variables:
          SOLUTION_ID: !FindInMap [Solution, Data, ID]
          SOLUTION_VERSION: !FindInMap [Solution, Data, Version]

  SolutionHelperRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "lambda.amazonaws.com"
            Action: "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"

  CreateUniqueID:
    Type: "Custom::LoadLambda"
    Properties:
      ServiceToken: !GetAtt SolutionHelper.Arn
      Region: !Ref "AWS::Region"
      CreateUniqueID: true

Outputs:
  TelemetryStreamName:
    Value: !Ref AnalyticsTelemetryStream
  RedshiftDatabaseName:
    Value: !FindInMap [RedshiftMappings, Databases, "analytics"]
  RedshiftHost:
    Value: !GetAtt RedshiftCluster.Endpoint.Address
  RedshiftPort:
    Value: !GetAtt RedshiftCluster.Endpoint.Port
  WorkerUsername:
    Value: !FindInMap [RedshiftMappings, Usernames, "worker"]
  ReadOnlyUsername:
    Value: !FindInMap [RedshiftMappings, Usernames, "readonly"]
  CustomResourceLambdaArn:
    Value: !GetAtt CustomResourceLambda.Arn
  GenerateDataCommand:
    Value: !Sub 'python .\\publish_data.py -r ${AWS::Region} -s ${AnalyticsTelemetryStream} -i .\\heatmap-sample-data.txt'
  GenerateHeatmapCommand:
    Value: !Sub 'python .\\generate_heatmap.py --db_host ${RedshiftCluster.Endpoint.Address} -r ${AWS::Region} -c ${RedshiftCluster} -e player_death'
  SolutionVersion:
    Value: !FindInMap [Solution, Data, Version]
  SolutionUUID:
    Value: !GetAtt CreateUniqueID.UUID
